# esp32-aws-iot-relay

./: .gitignore  Cargo.toml  README.md
src/: main.rs  structs.rs  wifi.rs
