[package]
name = "esp32_aws_iot_relay"
version = "0.1.0"
authors = ["Oliver Säfström <safstrom.oliver@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "esp32_aws_iot_relay"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]


[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48",optional = true, default-features = false }
esp-idf-sys = { version = "0.34", default-features = false}
esp-idf-hal = "0.43.1"
embedded-svc = "0.27.1"
anyhow = "1.0.86"
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive"]} 
serde_json = "1.0"

# For the LEDs
ws2812-esp32-rmt-driver = { version = "*", features = ["smart-leds-trait"] }
smart-leds = "0.4.0"
rgb = "0.8.37"


[build-dependencies]
embuild = "0.31.3"
